[tool.poetry]
name = "gewv-timeseries-client"
version = "0.5.8"
description = "Client to read and write data from our timeseries db."
authors = ["Karl <karl_eugen.wolffgang@tu-dresden.de>", "Martin <martin.altenburger@tu-dresden.de", "Paul <paul.seidel@tu-dresden.de"]
license = "MIT"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Developers",
        "Operating System :: Unix",
        "Operating System :: POSIX",
        "Operating System :: Microsoft",
        "Operating System :: MacOS"
    ]
homepage = "https://github.com/gewv-tu-dresden/timeseries-client"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
loguru = "^0.6.0"
influxdb-client = "^1.32.0"
pandas = "^1.4.4"
requests = "^2.28.1"
ciso8601 = "^2.2.0"
urllib3 = "^1.26.12"

[tool.poetry.dev-dependencies]
mypy = "black"
black = "^22.6.0"
rope = "^1.3.0"
pylint = "^2.15.0"
pytest = "^7.1.2"
commitizen = "^2.32.2"
python-semantic-release = "^7.31.4"
flake8 = "^5.0.4"
pytest-asyncio = "^0.19.0"
python-dotenv = "^0.20.0"

[tool.semantic_release]
version_variable = "gewv_timeseries_client/__init__.py:__version__"
version_source = "commit"
build_command = "/root/.poetry/bin/poetry version $(git describe --tags) && /root/.poetry/bin/poetry build"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
